# GraphicsOpenGL

./: .gitignore  CMakeLists.txt  build.py  buildLinux.py  buildWindows.py  conanfile.py
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/imgui/: CMakeLists.txt
libs/soild2/: CMakeLists.txt
libs/soild2/include/: SOIL2.hpp
libs/utils/: CMakeLists.txt
libs/utils/include/: Camera.hpp  IMesh.hpp  Mesh.hpp  MeshFactory.hpp  Mesh_VT.hpp  Mesh_VV.hpp  Mesh_VVT.hpp  Sphere.hpp  Torus.hpp  Utils.hpp  VertexMesh.hpp  modelImporter.hpp  stlHeaders.hpp
libs/utils/src/: Mesh.cpp  MeshFactory.cpp  Mesh_VT.cpp  Mesh_VV.cpp  Mesh_VVT.cpp  Sphere.cpp  Torus.cpp  Utils.cpp  VertexMesh.cpp  modelImporter.cpp
patrones/move/: Resource.cpp  Resource.hpp  classExe.cpp  move.cpp
patrones/singleton/: main.cpp  singleton.cpp  singleton.hpp
prototypes/Direcx/: buildWindows.py
prototypes/Direcx/src/shaders/: vertex.hlsl
prototypes/ECS/: CMakeLists.txt  componentCreator.cpp  componentCreator.hpp  componentStruct.hpp  main.cpp
prototypes/ECS/shader/: vertex_shader1.glsl
prototypes/FactoryBuffer/: CMakeLists.txt  Mesh.hpp  MeshFactory.hpp  MeshSimple.hpp  MeshTriangle.hpp  main.cpp
prototypes/LoadingModel/: loadingModel.cpp
prototypes/LoadingWindow/: loadingWindow.cpp
prototypes/data_oriented_programming/: hello  main.cpp
src/: HelloAttenuationLight.cpp  HelloBlending.cpp  HelloCamera.cpp  HelloCameraAround.cpp  HelloCoordinates.cpp  HelloCulling.cpp  HelloDeep.cpp  HelloDiffuseMap.cpp  HelloDirectionalLight.cpp  HelloGarden.cpp  HelloGlsl.cpp  HelloGui.cpp  HelloInterpolation.cpp  HelloLight.cpp  HelloMaterial.cpp  HelloMesh.cpp  HelloMixTexture.cpp  HelloModelLighting.cpp  HelloSquare.cpp  HelloTesting.cpp  HelloTexture.cpp  HelloTrans.cpp  HelloTriangle.cpp  HelloTriangle2.cpp  HelloWindow.cpp  HelloWindows.cpp
src/basic/: HelloGlsl.cpp  HelloInterpolation.cpp  HelloSquare.cpp
src/glsl/: example1
src/prototypes/: loadingModel.cpp  loadingWindow.cpp
src/prototypes/Direcx/: CMakeLists.txt  conanfile.py
src/prototypes/Direcx/src/: Ventana.cpp
src/prototypes/Direcx/src/shaders/: pixel.hlsl
src/shaders/: fragment_shader1.glsl  fragment_shader10.glsl  fragment_shader10_AttL.glsl  fragment_shader10_DirL.glsl  fragment_shader11.glsl  fragment_shader2.glsl  fragment_shader3.glsl  fragment_shader4.glsl  fragment_shader6.glsl  fragment_shader61.glsl  fragment_shader7.glsl  fragment_shader7_AL.glsl  fragment_shader7_DL.glsl  fragment_shader7_SL.glsl  fragment_shader8_ML.glsl  fragment_shader9_DML.glsl  fragment_shader9_ML.glsl  vertex_shader1.glsl  vertex_shader10.glsl  vertex_shader10_DirL.glsl  vertex_shader3.glsl  vertex_shader4.glsl  vertex_shader6.glsl  vertex_shader7.glsl  vertex_shader7_AL.glsl  vertex_shader7_DL.glsl  vertex_shader7_SL.glsl  vertex_shader9_ML.glsl  vertex_shader_P6.glsl  vertex_shader_skull.glsl
utils/: CMakeLists.txt
utils/include/public/: Sphere.hpp  Torus.hpp  Utils.hpp  modelImporter.hpp
utils/src/: Sphere.cpp  Torus.cpp  Utils.cpp  modelImporter.cpp
